# ai-cli

./: .gitignore  Cargo.toml  README.md  llm-instruction.md  tech-story.md
src/: lib.rs  main.rs
src/ai/: anthropic.rs  client.rs  gemini.rs  mock.rs  mod.rs  ollama.rs  openai.rs  prompts.rs
src/context/: fs_scanner.rs  mod.rs  shell.rs
src/core/: brain.rs  config.rs  executor.rs  mod.rs
src/shell_integration/: bash.sh  zsh.sh
src/tui/: layout.rs  mod.rs  renderer.rs  state.rs
src/tui/components/: mod.rs
tests/: ai_connectivity.rs  eval_test.rs  integration_test.rs  shell_integration_test.rs  tui_interaction_test.rs
tests/evals/: mod.rs
