[package]
name = "aether"
version = "0.1.0"
edition = "2021"
authors = ["Aether Team"]
description = "The Neural Fabric for your Shell"
license = "MIT"

[lib]
name = "aether"
path = "src/lib.rs"

[[bin]]
name = "aether"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.28"
crossterm = "0.28"

# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# HTTP client for AI APIs
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Configuration management
config = "0.14"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File system utilities
ignore = "0.4" # Gitignore-aware file walking (same as ripgrep)
walkdir = "2.5"

# Shell parsing and utilities
shellexpand = "3.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Streaming and async
tokio-stream = "0.1"

# Regex for eval pattern matching
regex = "1.10"

[dev-dependencies]
# Testing utilities
tempfile = "3.12"
assert_cmd = "2.0"
predicates = "3.1"
mockito = "1.5"
tokio-test = "0.4"
rexpect = "0.5"
regex = "1.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
